finished everything but search function

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<!-- bootflix is a WDI Woodstock Production! -->
+<!-- bootflix is a WDI RAVENCLAW Production! -->
   <head>
     <title>Bootflix :: alpha</title>
     <link rel="stylesheet" href="style/bootflix.css">
